# moonforge

./: .gitignore  .npmrc  .nprmc  README-Production.md  README.md  deploy-program-script.sh  package-lock.json  package.json  start-moonforge-script.sh  windows-anchor-setup.ps1
app/api/: ai-generate.ts
app/api/rpc/: route.ts
solana-program/: Anchor.toml  Cargo.toml
solana-program/programs/bonding-curve/: Cargo.toml
solana-program/programs/bonding-curve/src/: lib.rs
src/: App.tsx
src/components/: AISuggestions.tsx  CreatePostModal.tsx  ErrorBoundary.tsx  TokenAchievements.tsx
src/hooks/: useTokenAchievements.ts  useTokenCreation.ts
src/lib/solana/: tokenCreation.ts
src/pages/: TokenDetail.tsx
src/services/: aiService.ts
src/types/: database.types.ts
supabase/: config.toml
supabase/functions/bonding-curve-trade/: index.ts
supabase/functions/bonding-curve-trade-v2/: index.ts
supabase/functions/create-bonding-curve-token/: index.ts
supabase/functions/create-real-token/: index.ts
supabase/functions/create-token/: index.ts
supabase/functions/create-token-user-pays/: index.ts
